--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ Blue-Green: #128185
 body {
      margin-top: 60px;
      outline: solid red 1px;
+     font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -109,6 +110,15 @@ body {
 
 .container .text-muted {
   margin: 20px 0;
+}
+
+h1, strong {
+     color: #128185;
+     font-weight: 600;
+}
+
+hr {
+     border: 1px solid #000;
 }
 
 .footer > .container {
