--- a/css/styles.css
+++ b/css/styles.css
@@ -14,14 +14,24 @@ h1, strong {
      font-weight: 600;
 }
 
+a {
+  color: #128185;
+  font-weight: 600;
+}
+
+a:hover {
+  color: #128185;
+  font-weight: 600;
+  text-decoration: underline;
+}
+
 hr {
      border: 1px solid #128185;
 }
 
-#top {
+/*#top {
      padding-top: 80px;
-}
-
+}*/
 
 .navbar-brand>img {
     display: block;
@@ -33,36 +43,38 @@ hr {
      border-radius: 0px;
      color: #fff;
      font-weight: bolder;
-     margin-top: 60px;
+     margin-top: 0px;
 }
 
 .navbar-default {
      background-color: #128185;
      border-color: #176a6d;
-     margin-top: 60px;
+     margin-top: 0px;
 }
 
 .navbar-default .navbar-brand {
     color: #fff;
+    font-weight: 600;
 }
 
 .navbar-default .navbar-brand:hover {
-     background-color: #F4B931;
+     background-color: rgba(244, 185, 49, 0.75);
      color: #fff;
 }
 
 .navbar-default .navbar-nav>.active>a {
      color: #fff;
-     background-color: #F4B931;
+     background-color: rgba(244, 185, 49, 0.75);
 }
 
 .navbar-default .navbar-nav>li>a {
     color: #fff;
+    font-weight: 600;
 
 }
 
 .navbar-default .navbar-nav>li>a:hover {
-    background-color: #F4B931;
+     background-color: rgba(244, 185, 49, 0.75);
     color: #fff;
 }
 
@@ -123,7 +135,7 @@ hr {
 
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 375px) {
      .navbar-brand {
           font-size: 16px;
      }
@@ -131,7 +143,13 @@ hr {
 
 @media screen and (max-width: 360px) {
      .navbar-brand {
-          font-size: 14px;
+          font-size: 15px;
+     }
+}
+
+@media screen and (max-width: 320px) {
+     .navbar-brand {
+          font-size: 12px;
      }
 }
 
@@ -151,7 +169,30 @@ hr {
      padding: 20px;
 }
 
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
+.padding-bottom {
+  padding-bottom: 30px;
+}
+
+footer {
+  color: #fff;
+  font-weight: 600;
+  background-color: #128185;
+  padding: 20px;
+}
+
+footer address a, footer address strong {
+  color: #fff;
+}
+
+footer address a:hover {
+  color: #F4B931;
+  text-decoration: none;
+}
+
+footer  #pcpLogo {
+  margin-top: -10px;
+}
+
+footer #dbhdsLogo {
+     padding-top: 65px;
 }
