--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@ Blue-Green: #128185
 body {
      margin-top: 60px;
      font-family: Arial, Helvetica, sans-serif;
-     font-weight: bolder;
+/*     font-weight: bolder;*/
+     font-size: 18px;
 }
 
 h1, strong {
@@ -14,14 +15,33 @@ h1, strong {
      font-weight: 600;
 }
 
+
+/*
+CSS Box Shadow Effect from Paulund
+Source: https://paulund.co.uk/learn-css-box-shadow
+and Box Shadow Generator: https://coveloping.com/tools/css-box-shadow-generator
+*/
+
+
+#welcomeHeader, #aboutHeader, #reportsHeader, #resourcesHeader, #contactHeader {
+    background-color: #128185;
+    padding: 10px;
+    border: #F4B931 solid 4px;
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0px 4px 7px 0px #99a3ad, 0px 0px 40px #eeeeee; 
+}
+
+/*------------------------------------------*/
+
 a {
   color: #128185;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 a:hover {
   color: #128185;
-  font-weight: 600;
+  font-weight: 500;
   text-decoration: underline;
 }
 
@@ -109,13 +129,20 @@ hr {
     background-color: #128185;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
      .navbar-default {
           margin-top: 0px;
      }
+     
      .navbar-default .container {
          padding-bottom: 0px;
          min-height: 100%;
+     }
+
+     .navbar-default .navbar-nav>li>a {
+         color: #fff;
+         font-weight: 600;
+         font-size: 12px;
      }
 
      .navbar-form>#mobile-button {
@@ -127,23 +154,36 @@ hr {
      }
 
 
+/*
      .navbar-form>.form-control {
           width: 400px;
           border-radius: 20px;
           margin-left: 10px;
      }
+*/
 
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 420px) {
+     body {
+          font-size: 16px;
+     }
+     
+     
      .navbar-brand {
           font-size: 16px;
      }
 }
 
+@media screen and (max-width: 375px) {
+     .navbar-brand {
+          font-size: 14px;
+     }
+}
+
 @media screen and (max-width: 360px) {
      .navbar-brand {
-          font-size: 15px;
+          font-size: 14px;
      }
 }
 
@@ -155,6 +195,25 @@ hr {
 
 .container .text-muted {
   margin: 20px 0;
+}
+
+.panel-success {
+     border-color: #128185;
+}
+
+.panel-success>.panel-heading {
+    color: #fff;
+    background-color: #128185;
+    border-color:  #128185;
+}
+
+.panel-title {
+     color: #fff;
+}
+
+.panel-body>a {
+     font-size: 16px;
+     font-weight: 600;
 }
 
 .report-summary, .resources-info {
@@ -173,11 +232,20 @@ hr {
   padding-bottom: 30px;
 }
 
+.return {
+     font-size: 20px;
+     font-weight: 600; 
+}
+
 footer {
   color: #fff;
   font-weight: 600;
   background-color: #128185;
   padding: 20px;
+}
+
+address {
+  font-weight: 500;
 }
 
 footer address a, footer address strong {
@@ -194,5 +262,5 @@ footer  #pcpLogo {
 }
 
 footer #dbhdsLogo {
-     padding-top: 65px;
+  padding-top: 65px;
 }
