--- a/css/styles.css
+++ b/css/styles.css
@@ -154,14 +154,6 @@ hr {
      }
 
 
-/*
-     .navbar-form>.form-control {
-          width: 400px;
-          border-radius: 20px;
-          margin-left: 10px;
-     }
-*/
-
 }
 
 @media screen and (max-width: 420px) {
@@ -199,6 +191,7 @@ hr {
 
 .panel-success {
      border-color: #128185;
+     box-shadow: 0px 4px 7px 0px #99a3ad, 0px 0px 40px #eeeeee; 
 }
 
 .panel-success>.panel-heading {
